exports[`test Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.google.com.au"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Google
</a>
`;

exports[`test Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.google.com.au"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Google
</a>
`;

exports[`test Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.google.com.au"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Google
</a>
`;
